# Backend-Rust-Tecmilenio

./: Cargo.toml  POSTMAN_GUIDE.md  README.md  diesel.toml  env.example
migrations/2024-01-01-000001_initial_schema/: down.sql  up.sql
src/: main.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/dto/: auth_dto.rs  booking_dto.rs  landing_dto.rs  mod.rs  promotion_dto.rs
src/application/handlers/: auth_handler.rs  booking_handler.rs  landing_handler.rs  mod.rs  promotion_handler.rs
src/application/queries/: mod.rs
src/application/use_cases/: create_booking_use_case.rs  forgot_password_use_case.rs  get_booking_use_case.rs  get_landing_page_use_case.rs  get_promotion_use_case.rs  list_promotions_use_case.rs  list_user_bookings_use_case.rs  login_user_use_case.rs  logout_use_case.rs  mod.rs  quote_booking_use_case.rs  register_user_use_case.rs  resend_email_verification_use_case.rs  reset_password_use_case.rs  send_email_use_case.rs  verify_email_use_case.rs
src/domain/: mod.rs
src/domain/entities/: access_token.rs  booking.rs  email.rs  email_verification_token.rs  landing.rs  mod.rs  promotion.rs  session.rs  user.rs
src/domain/events/: mod.rs
src/domain/repositories/: access_token_repository.rs  booking_repository.rs  email_verification_repository.rs  landing_repository.rs  mod.rs  promotion_repository.rs  session_repository.rs  user_repository.rs
src/domain/services/: email_service.rs  mod.rs  password_service.rs  token_service.rs
src/domain/value_objects/: email.rs  mod.rs  password.rs  username.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/: connection.rs  mod.rs  schema.rs
src/infrastructure/external_services/: mod.rs
src/infrastructure/messaging/: mod.rs
src/infrastructure/repositories/: mod.rs  postgres_access_token_repository.rs  postgres_booking_repository.rs  postgres_email_verification_repository.rs  postgres_landing_repository.rs  postgres_promotion_repository.rs  postgres_session_repository.rs  postgres_user_repository.rs
src/infrastructure/services/: email_template_service.rs  mod.rs  resend_email_service.rs  resend_official_service.rs
src/interfaces/: mod.rs
src/interfaces/controllers/: auth_controller.rs  booking_controller.rs  landing_controller.rs  mod.rs  promotion_controller.rs
src/interfaces/graphql/: mod.rs
src/interfaces/grpc/: mod.rs
src/interfaces/middleware/: mod.rs
src/interfaces/rest/: auth_routes.rs  booking_routes.rs  landing_routes.rs  mod.rs  promotion_routes.rs
src/shared/: error_types.rs  jwt_utils.rs  mod.rs  response_types.rs  validation_utils.rs
src/shared/constants/: mod.rs
src/shared/errors/: mod.rs
src/shared/utils/: mod.rs
