[package]
name = "Backend-Rust-Tecmilenio"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }

# Database
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json", "64-column-tables"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Configuration
config = "0.14"

# Async runtime
futures = "0.3"

# JWT
jsonwebtoken = "9.2"

# Password hashing
bcrypt = "0.15"

# Regex
regex = "1.10"

# Async traits
async-trait = "0.1"

# Random number generation
rand = "0.8"

[dev-dependencies]
# Testing
tokio-test = "0.4"